assets/css/third-card-style.css
* {
  box-sizing: border-box;
}

body {
  background-image: url("/assets/images/bg.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 100vh;
  color: rgb(178, 160, 255);
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  text-align: center;
}

.container {
  min-height: 100vh;
  width: 100%;
  background-color: rgb(255, 255, 255, 0.2);
  padding-top: 150px;
}

.card {
  max-width: 25rem;
  width: 100%;
  min-width: 6.25rem;
  overflow: hidden;
  border-radius: 0.75rem;
  margin: 0 auto;
}

.top-container {
  position: relative;
  background-color: rgba(36, 28, 96, 0.802);
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2rem 1.5rem;
}

.notification-container {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.top-btn {
  background: transparent;
  border: none;
  cursor: pointer;
  font-size: 1.25rem;
  color: inherit;
}

.top-btn:hover {
  color: #fff;
}

.user-img {
  border-radius: 50%;
  border: 1px solid rgb(178, 160, 255);
  padding: 0.5rem;
  max-width: 11.25rem;
  width: 100%;
  min-width: 3.125rem;
  object-fit: cover;
}

.user-name {
  font-size: 1.75rem;
  margin: 2rem 0 0.5rem;
  color: #fff;
}

.write-btn {
  position: absolute;
  right: 1.75rem;
  bottom: -1.75rem;
  background-color: rgb(0, 183, 255);
  color: #fff;
  border: none;
  border-radius: 50%;
  padding: 1rem;
  font-size: 1.5rem;
  cursor: pointer;
  box-shadow: 0 0.5rem 1.2rem -0.5rem rgb(152, 152, 152);
}

.write-btn:hover {
  background-color: rgb(0, 157, 219);
}

.bottom-container {
  background: #fff;
  padding: 1.5rem;
}

.details-container {
  display: flex;
  justify-content: space-between;
  font-family: sans-serif;
  color: rgb(101, 101, 101);
  margin: 2rem 0.75rem;
  flex-wrap: wrap;
}

.detail {
  display: flex;
  flex-direction: column;
  gap: 8px;
  padding: 8px;
}

.number {
  font-size: 2rem;
}

.text {
  font-size: 0.625rem;
  text-transform: uppercase;
}

